2005-09-13  Karine Delvare  <kdelvare@nerim.net>

	* app/tools/gimprectangletool.c: don't modify the rectangle while
	moving, and stick to edges when going out of image boundaries.

2005-09-13  Sven Neumann  <sven@gimp.org>

	* app/actions/edit-actions.c: use "Undo History" instead of "Undo
	Editor" in user-visible string. Removed wrongly used ellipsis.

	* app/dialogs/offset-dialog.c: added translator comment.

	* app/dialogs/quit-dialog.c: string change.

2005-09-13  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in: allow to disable build of the poppler plug-in.

2005-09-13  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-close.c (gimp_time_since): use
	ngettext for plural forms.

2005-09-13  Sven Neumann  <sven@gimp.org>

	* modules/colorsel_cmyk.c: added comments for translators.

2005-09-13  Sven Neumann  <sven@gimp.org>

	* app/core/gimppalette-import.c (gimp_palette_import_from_image):
	ignore transparent pixels as suggested in bug #316212.

2005-09-13  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpbucketfilloptions.c: reorder options as suggested
	in bug #316150.

2005-09-13  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-title.c
	(gimp_display_shell_format_title): use ngettext for plural form.

	* app/dialogs/user-install-dialog.c: string fix (bug #316148).

2005-09-12  Michael Natterer  <mitch@gimp.org>

	Really fix bug #150593:

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpdockseparator.[ch]: new widget implementing the
	droppable separator bar in docks.

	* app/widgets/gimpdock.c: use it and removed local separator
	utility functions.

	* app/widgets/gimptoolbox.c: use GimpDockSeparator API to show/hide
	the label. Expand the separator initially.

	* themes/Default/gtkrc
	* themes/Small/gtkrc: the separator height style property moved
	from GimpDock to GimpDockSeparator.

2005-09-12  Akkana Peck  <akkana@cvs.gnome.org>

	* menus/image-menu.xml.in